@@ -12,6 +12,9 @@ import android.widget.EditText;
 
 import com.example.vince.youtubeplayertest.Activities.BackgroundWorker;
 import com.example.vince.youtubeplayertest.Activities.SearchActivity;
+import com.example.vince.youtubeplayertest.Activities.VideoItemAdapter;
+import com.example.vince.youtubeplayertest.Activities.helper_classes.Hub;
+import com.example.vince.youtubeplayertest.Activities.helper_classes.HubSingleton;
 import com.example.vince.youtubeplayertest.Activities.users_only.QueueSong;
 import com.example.vince.youtubeplayertest.R;
 import com.google.android.youtube.player.YouTubeInitializationResult;
@@ -24,24 +27,40 @@ import org.json.JSONObject;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.concurrent.ExecutionException;
 
 public class QueueActivity extends AppCompatActivity {
     final public String API_KEY = "AIzaSyDtCJTBSLt9M1Xi_EBr49Uk4W8q4HhFHPU";
     private YouTubePlayer mYouTubePlayer;
     LinkedList<String> queue = new LinkedList<>();
     ArrayList<QueueSong> list;
+    String flag = "Owner";
+
+    BackgroundWorker.AsyncResponse callback;
+    BackgroundWorker addBW;
+    BackgroundWorker listBW;
+    String id;
+    String title;
+    RecyclerView songListView;
+    Hub appState;
 
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_queue);
+        list = new ArrayList<>();
+
+
+        HubSingleton hubSingleton = HubSingleton.getInstance();                         // SINGLETON HERE
+        list = hubSingleton.getEntireList();                                            // SINGLETON HERE
 
         final EditText url_text = (EditText) findViewById(R.id.url);
         Button url_button = (Button) findViewById(R.id.url_button);
 
-        //need data to run this to test
-        BackgroundWorker bw = new BackgroundWorker(new BackgroundWorker.AsyncResponse() {
+        appState = ((Hub)getApplicationContext());
+/*
+        callback = new BackgroundWorker.AsyncResponse() {
             @Override
             public void processFinish(String result) {
                 try {
@@ -57,6 +76,7 @@ public class QueueActivity extends AppCompatActivity {
                         item.setTitle(jObj.getString("song_title"));
                         item.setUpVotes(jObj.getInt("up_votes"));
                         item.setDownVotes(jObj.getInt("down_votes"));
+                        item.setId(jObj.getString("song_id"));
                         list.add(item);
                         Log.d("list", list.get(0).getTitle());
                     }
@@ -64,14 +84,58 @@ public class QueueActivity extends AppCompatActivity {
                     e.printStackTrace();
                 }
             }
-        });
-        bw.execute("songList", "46","testPhone2_1487947707409");
+        };
+        addBW = new BackgroundWorker(callback);
+        listBW = new BackgroundWorker(callback);
+*/
+        Intent intent = getIntent();
+        if(intent.hasExtra("title")) {
+            title = intent.getStringExtra("title");
+            id = intent.getStringExtra("id");
+            QueueSong song = new QueueSong();
+            song.setId(id);
+            song.setTitle(title);
 
+            //list.add(song);
+            try {
+                hubSingleton.add(song, appState.getHubId().toString(), appState.getUserID());
+            } catch (ExecutionException e) {
+                e.printStackTrace();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+
+
+
+            list = hubSingleton.getEntireList();                                            // SINGLETON HERE
+// SINGLETON HERE
+
+            //addBW.execute("addSong", appState.getHubId().toString(), appState.getUserID(), id, title);
+        }
+
+        //listBW.execute("songList", appState.getHubId().toString(), appState.getUserID());
+        //TODO REFRESH QUEUE IN SEPARATE FUNCTION CONSTANTLY
+
+        //
+        //Vector<VideoItem> videos = new Vector<>();
+        //videos.add(new VideoItem("hello", "song", "id: 1"));
+        VideoItemAdapter adapter = new VideoItemAdapter(QueueActivity.this, hubSingleton.getEntireList(), new VideoItemAdapter.OnItemClickListener() {
+            @Override
+            public void onItemClick(QueueSong videoItem) {
+
+            }
+        });
+        Log.d("list",hubSingleton.getEntireList().toString());
+        songListView = (RecyclerView) findViewById(R.id.songList);
+        songListView.setAdapter(adapter);
+        songListView.setLayoutManager(new LinearLayoutManager(this));
+        //
 
         // initialize YouTube player
         YouTubePlayerFragment mYouTubePlayerFragment = (YouTubePlayerFragment)
                 getFragmentManager().findFragmentById(R.id.youtube_player);
         mYouTubePlayerFragment.initialize(API_KEY, new YouTubePlayer.OnInitializedListener() {
+
             @Override
             public void onInitializationFailure(YouTubePlayer.Provider provider, YouTubeInitializationResult youTubeInitializationResult) {
 
@@ -79,6 +143,9 @@ public class QueueActivity extends AppCompatActivity {
 
             @Override
             public void onInitializationSuccess(YouTubePlayer.Provider provider, YouTubePlayer youTubePlayer, boolean b) {
+                if(!b){
+                    youTubePlayer.cueVideo(getIntent().getStringExtra("id"));
+                }
                 mYouTubePlayer = youTubePlayer;
                 mYouTubePlayer.setPlayerStateChangeListener(new YouTubePlayer.PlayerStateChangeListener() {
                     @Override
@@ -103,9 +170,10 @@ public class QueueActivity extends AppCompatActivity {
 
                     @Override
                     public void onVideoEnded() {
-                        queue.removeFirst();
-                        if (queue.size() != 0)
-                            mYouTubePlayer.loadVideo(queue.peek());
+                        list.remove(0);
+                        if (list.size() != 0)
+
+                            mYouTubePlayer.loadVideo(list.get(0).getId());
                     }
 
                     @Override
@@ -131,8 +199,10 @@ public class QueueActivity extends AppCompatActivity {
                 }
 
                 // add new data to queue
-                if (queue.size() == 0)
+                if (list.size() == 0)
                     mYouTubePlayer.loadVideo(video_id);
+                QueueSong song = new QueueSong();
+                song.setId(video_id);
                 queue.addLast(video_id);
                 url_text.getText().clear();
             }
@@ -140,6 +210,8 @@ public class QueueActivity extends AppCompatActivity {
     }
 
     public void searchVideo(View view) {
-        startActivity(new Intent(QueueActivity.this, SearchActivity.class));
+        Intent intent = new Intent(QueueActivity.this, SearchActivity.class);
+        intent.putExtra("view_queue",flag);
+        startActivity(intent);
     }
 }
